bin/testsuite/tests/compiler/src/errors/compiler134.swg


#global testerror "Err0223";
namespace A
{
	namespace B
	{
		attr toto() -> "var"
	}
	attr toto() -> "func"
}
